--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
+        <title> Bases Calculator </title>
     </head>
     <body onload="convert()">
         <div class="container">
